# ChangeLog for media-video/vlc
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-video/vlc/ChangeLog,v 1.668 2011/02/16 16:55:07 aballier Exp $

  16 Feb 2011; Alexis Ballier <aballier@gentoo.org> vlc-9999.ebuild,
  metadata.xml:
  Add linsys useflag

  16 Feb 2011; Alexis Ballier <aballier@gentoo.org> vlc-9999.ebuild,
  metadata.xml:
  Add growl useflag for growl notification support (over UDP for remote access
  and native on OSX)

  16 Feb 2011; Alexis Ballier <aballier@gentoo.org> vlc-9999.ebuild:
  libnotify plugin requires gtk+-2.0

  16 Feb 2011; Alexis Ballier <aballier@gentoo.org> vlc-9999.ebuild:
  Rename the stream useflag to encode and enable it by default which makes more
  sense.

  16 Feb 2011; Alexis Ballier <aballier@gentoo.org> vlc-9999.ebuild:
  Remove the babysitting line for the qt4 gui, it is well known these days that
  vlc has a qt4 gui, remove the flag filtering for x86, gcc should be fixed
  instead.

  16 Feb 2011; Alexis Ballier <aballier@gentoo.org> vlc-9999.ebuild:
  Convert to EAPI-4, make use of REQUIRED_USE, simplify and remove useless
  eclass inherits.

  16 Feb 2011; Alexis Ballier <aballier@gentoo.org> vlc-9999.ebuild:
  remoteosd is now controlled by the gcrypt useflag

  14 Feb 2011; Alexis Ballier <aballier@gentoo.org> -vlc-1.1.4.ebuild,
  -vlc-1.1.4.1.ebuild, -vlc-1.1.5.ebuild, -vlc-1.1.6.ebuild:
  remove old

  12 Feb 2011; Raúl Porcel <armin76@gentoo.org> vlc-1.1.6.ebuild,
  vlc-1.1.7.ebuild:
  sparc stable wrt #353326

  05 Feb 2011; Tobias Klausmann <klausman@gentoo.org> vlc-1.1.7.ebuild:
  Stable on alpha, bug #353326

  04 Feb 2011; Christian Faulhammer <fauli@gentoo.org> vlc-1.1.7.ebuild:
  stable x86, security bug 353326

  03 Feb 2011; Alexis Ballier <aballier@gentoo.org> vlc-1.1.7.ebuild:
  Fix build with libmatroska-1.1.0, by Ambroz Bizjak, bug #353491

  01 Feb 2011; Kacper Kowalik <xarthisius@gentoo.org> vlc-1.1.7.ebuild: