@@ -7,13 +7,13 @@ DIST vlc-patches-89.tar.bz2 3370 RMD160 da3c173817f6666abfaaef5762af58f3810e5180
 DIST vlc-patches-91.tar.bz2 3955 RMD160 37024ac3d68f0c36f711bb680c573976e4e729e8 SHA1 987ac5f47926d76073e84643023df346f9a0027a SHA256 9863e9fd62bf07641e3e99cbd11194cd462ad99ca1719034badfff74419ec451
 EBUILD vlc-1.1.7.ebuild 12269 RMD160 36dc682bb0549b58f7803aa17a055ef0b971ca53 SHA1 1e561a2088c4c4ed3935d24b2a63f02e495a84fb SHA256 261f17b1624e51706b95cf97e5c342b1012147d9027bb1e485aecef29bdcd7e8
 EBUILD vlc-1.1.9999.ebuild 12280 RMD160 e7e42fd81239d7151280219c89c88350505e5d5f SHA1 b13979bc3cff3478efe29e8181de1e1b13a84107 SHA256 8a31788ba75dcb01a467c315b11110a2e0d2ed3f823233d87e6572d296da6843
-EBUILD vlc-9999.ebuild 9628 RMD160 00c45916cc2a8a4cf0fc3de2c846ec6755e47833 SHA1 77c7ff7cfe46a1652ec59c00bcf35a75e1b03262 SHA256 bc4ca4329668d8557e8d2e8917fb56d0ec5240e28f813e81b235b2100a9b2e17
-MISC ChangeLog 101416 RMD160 3eea680808156117c3f822c759965fcb28aeb3b0 SHA1 263a5c7ee328656fcf0704855182da7900988add SHA256 ea902203eee88e84b2e80e548dc9039f9f42e755ffb384a0ced402340be4d5b6
-MISC metadata.xml 4425 RMD160 c3b3b237eaa2da6f9d174f167f48fbcee61a3819 SHA1 cdddd1fe9da60ce533bae48b5b0cc8d3e7fbae67 SHA256 7528fb4a421d154143fb5e07f039cc49e4668c3ba7af29a528700a0b610134c9
+EBUILD vlc-9999.ebuild 9684 RMD160 2ba6f5c272696fed3e9d0db6a83e658bad946370 SHA1 55529d77033df4782ef6a0f9f3702c499444d50b SHA256 4d4ece62630a6ed65822fa35d20f78b88a736b0a6f4b03de34726597ebff5796
+MISC ChangeLog 101544 RMD160 5469609a0edf39676d8b356c507d68d7911c455a SHA1 790380df9d716c5654c7e2594bb088b237ec977a SHA256 3a6b6f4f721368e8a5e49fc4a07a420d7626dd01148e4b23c7c6dbfc3bab87ba
+MISC metadata.xml 4549 RMD160 79f02b917362a544fe41be23477e0cb4934ec3fb SHA1 554be809ae98f4191799fc9cbc51479c8120c9ae SHA256 66467242ed84f511e0c59c20e9727fc521936684cc29d5cc208c754f342c12c1
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEARECAAYFAk1cAXkACgkQvFcC4BYPU0qjOQCff9GRv926HwnOGiNH8MJURyUK
-FcQAoIMsbLm07D26sibc9Qj2WGL86PHr
-=jPHE
+iEYEARECAAYFAk1cBgUACgkQvFcC4BYPU0r+DwCgu7Lac3J724ir4YKA0X2T2jVK
+ZgkAoKAdP4AUyU3KVJTZgAi6VefpEa2c
+=Ju7Z
 -----END PGP SIGNATURE-----
