@@ -8,8 +8,10 @@
   </maintainer>
   <use>
     <flag name="atmo">Enables support for AtmoLight (homebrew Ambient Lighting Technology)</flag>
+	<flag name="bda">Enables Win32 DirectShow BDA support.</flag>
     <flag name="dc1394">Enables IIDC cameras support.</flag>
     <flag name="dirac">Enable Dirac video support (an advanced royalty-free video compression format) via the reference library: dirac.</flag>
+	<flag name="dshow">Enables Win32 DirectShow support.</flag>
     <flag name="fluidsynth">Enables Fluidsynth MIDI software synthesis (with external sound fonts).</flag>
     <flag name="gcrypt">Enables cryptography support via libgcrypt.</flag>
     <flag name="gme">Enables support for <pkg>media-libs/game-music-emu</pkg> for playing various video game music formats.</flag>
